--- a/WebApp/static/css/map1.css
+++ b/WebApp/static/css/map1.css
@@ -28,8 +28,18 @@
     max-width: 100%;
 }
 
-#legend svg {
+#legends_gee svg {
     margin: 10px 5px 10px 0;
+}
+
+.arcgis-legend, .thredds-legend {
+    width: 100px;
+    height: 230px;
+    font-size: 12px;
+    color: #ffffff;
+    background-color: #000000;
+    display: inline-flex;
+    margin: 10px 17px 10px 0;
 }
 
 .leaflet-top.leaflet-right {
@@ -167,8 +177,8 @@ p {
 }
 
 #legend_chirps, #legend_esi {
-    display: inline-flex;
-    margin: 10px;
+    /*display: inline-flex;*/
+    /*margin: 10px;*/
 }
 
 label {
